test/instance-checks-4.err.expect
test/instance-checks-4.ktn:1:1: error: expected scalar type int but got t1
test/instance-checks-4.ktn:1:1: note: t1 (from example) is from here
test/instance-checks-4.ktn:1:15: note: int (from example) is from here

test/instance-checks-4.ktn:1:1: error: expected stack type s1... int but got s1... t1

test/instance-checks-4.ktn:1:1: error: expected stack type s1... int t1 but got s1... t1 t1

test/instance-checks-4.ktn:1:1: error: expected scalar type (s2... int t1 -> s2... t1 t1) but got (s1... -> s1...)
test/instance-checks-4.ktn:1:36: note: (s1... -> s1...) is from here
test/instance-checks-4.ktn:1:15: note: (s2... int t1 -> s2... t1 t1) is from here
